--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>really-simple-xml</groupId>
   <artifactId>really-simple-xml</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <name>really-simple-xml</name>
   <url>http://maven.apache.org</url>
 
